force-app/main/default/objects/Workout_Plan__c/Workout_Plan__c.object-meta.xml
<CustomObject>
    <label>Workout Plan</label>
    <nameField>
        <displayFormat>Plan ID - {0000}</displayFormat>
        <label>Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workout Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>