force-app/main/default/objects/Workout_Plan__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Workout Plans</relationshipLabel>
    <relationshipName>Workout_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>