force-app/main/default/objects/Workout_Plan__c/fields/Exercises__c.field-meta.xml
<CustomField>
    <fullName>Exercises__c</fullName>
    <label>Exercises</label>
    <type>TextArea</type>
</CustomField>