force-app/main/default/objects/Workout_Plan__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goals</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Workout Plans</relationshipLabel>
    <relationshipName>Workout_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>