force-app/main/default/objects/Workout_Plan__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workout Plans</relationshipLabel>
    <relationshipName>Workout_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>